# scaling-verification

./: .gitignore  LICENSE  README.md  example.sh  play.ipynb  pyproject.toml  test_gpqa.sh  test_installation.py
distillation/: README.md  evaluate.py  train.py
generation/: README.md  VERIFIERS.md  generate_reasoning_samples.py  lm_judges.py  rm_models.py  unified_RMs_and_LM_Judges.py  unified_evaluation.py  utils.py
scripts/: plot_coverage.py  plot_results_scaling_laws.py  plot_scaling_laws.py  plot_verifier_accuracies_pdataset.py
selection/: README.md  plot_results.py  run.py  run_all_configs.sh  test_all_configs.sh
selection/configs/: first_sample.yaml  majority_vote.yaml  supervised.yaml  supervised_bert.yaml  weak_supervision.yaml  weak_supervision_clustering.yaml
selection/configs/best_configs/: GPQA_1K.yaml  GPQA_70B.yaml  GPQA_8B.yaml  MATH-500_70B.yaml  MATH-500_8B.yaml  MMLU-Pro_70B.yaml  MMLU-Pro_8B.yaml  MMLU_70B.yaml  MMLU_8B.yaml
weaver/: __init__.py  config_handler.py  constants.py  dataset.py  models.py  tensor_decomp.py  utils.py  utils_metrics.py
